# script-wrap-precompile

./: .gitignore  Cargo.toml  README.md  URI.txt  URIs.txt  package.json  polywrap.graphql  polywrap.yaml
engine/: wrap.info
src/: lib.rs
src/tests/test_utils/: get_client_with_module.rs  invoke_client.rs  load_wrap.rs  mod.rs  replace_user_module.rs
src/wrap/: entry.rs  mod.rs
src/wrap/imported/: mod.rs
src/wrap/imported/js_engine_eval_result/: mod.rs  serialization.rs
src/wrap/imported/js_engine_global_var/: mod.rs  serialization.rs
src/wrap/imported/js_engine_module/: mod.rs  serialization.rs
src/wrap/module/: mod.rs  module.rs  serialization.rs  wrapped.rs
