[package]
name = "module"
version = "0.1.0"
description = "Script WRAP template"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/script-wrap-template"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }

[dev-dependencies]
polywrap_client = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
polywrap_client_default_config = { git = "https://github.com/polywrap/rust-client", branch = "nerfzael-plugin-option-deser-issue" }
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
